# REPORTBOT

./: .editorconfig  .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
src/: config.py  db.py  main.py  models.py
src/handlers/: commands.py  corrections.py  images.py  sessions.py
src/middleware/: errors.py  logging.py
src/services/: formatting.py  local_ocr.py  matching.py  normalize.py  sending.py  vision.py
tests/: test_formatting.py  test_normalize.py
