
[project]
name = "ig-report-bot"
version = "0.2.0"
description = "Telegram bot to OCR Instagram screenshots and send daily reports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.7.0",
    "python-dotenv>=1.0.1",
    "openai>=1.35.10",
    "pydantic>=2.7.0",
    "rapidfuzz>=3.6.1",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "black>=24.4.2", "isort>=5.13.2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["services", "handlers", "middleware"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
